--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.2",
     "dotenv": "^16.0.3",
+    "ethers": "^6.1.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
